--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css\style.css">
     <title>Calc</title>
 </head>
-<body class="body _night">
+<body class="body">
     <div class="wrapper">
         <main class="main">
             <div class="calc">
